<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="48dp"
    android:minHeight="48dp"
    tools:context=".R8">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/upper_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/screen_title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/screen_title_first"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/screen_title_first"
                        android:textAlignment="viewEnd"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/screen_title_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/screen_title_second"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/screen_title_second"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/screen_title_second"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/screen_title_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/screen_title_first"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/screen_title_first"
                        app:layout_constraintTop_toTopOf="@+id/screen_title_first" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/inner_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/rectangle_curved_shape">

                    <TextView
                        android:id="@+id/info_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/info_title"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/med_title_size"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/full_name"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_size"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_title" />

                    <TextView
                        android:id="@+id/personal_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/personal_number"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/full_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/break_line_shape" />

            <LinearLayout
                android:id="@+id/lower_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_title"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/big_title_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="8"
                        android:hint="@string/date_hint"
                        android:inputType="date"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:textAlignment="center"
                        android:textColor="@color/light_gray" />

                    <ImageButton
                        android:id="@+id/calendar_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:contentDescription="@string/calendar_button"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:onClick="onCalendarClick"
                        app:srcCompat="@drawable/baseline_calendar_month_24"
                        app:tint="?android:attr/textColorPrimary"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/inner_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/services"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:dropDownWidth="wrap_content"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:spinnerMode="dialog"
                        android:textAlignment="center" />

                </LinearLayout>

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="true"
                    android:background="@drawable/rectangle_curved_shape"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/notes_hint"
                    android:inputType="textMultiLine"
                    android:maxWidth="488dp"
                    android:maxHeight="488dp"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginBottom="16dp"
                    android:maxWidth="320dp"
                    android:minWidth="88dip"
                    android:minHeight="48dip"
                    android:onClick="onSubmit"
                    android:text="@string/button_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>